--- a/package.json
+++ b/package.json
@@ -21,23 +21,26 @@
   "author": "Dimitry Ivanov <2@ivanoff.org.ua> # curl -A cv ivanoff.org.ua",
   "license": "MIT",
   "dependencies": {
-    "2valid": "^2.2.1",
-    "body-parser": "^1.16.0",
-    "create-raml": "^3.2.2",
-    "express": "^4.14.0",
+    "2valid": "^2.5.4",
+    "async": "^2.5.0",
+    "body-parser": "^1.17.2",
+    "create-raml": "^3.2.3",
+    "express": "^4.15.4",
+    "jsonwebtoken": "^7.4.2",
     "lodash": "^4.17.4",
-    "moment-timezone": "^0.5.11",
-    "mongodb": "^2.2.22",
-    "uuid": "^3.0.1",
+    "md5": "^2.2.1",
+    "moment-timezone": "^0.5.13",
+    "mongodb": "^2.2.31",
+    "uuid": "^3.1.0",
     "winston": "^2.3.1"
   },
   "devDependencies": {
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
-    "coveralls": "^2.11.15",
+    "coveralls": "^2.13.1",
     "istanbul": "^0.4.5",
-    "mocha": "^3.2.0",
-    "mongo-mock": "^2.4.0",
+    "mocha": "^3.5.0",
+    "mongo-mock": "^2.4.1",
     "should": "^11.2.1"
   }
 }
