--- a/src/package.json
+++ b/src/package.json
@@ -6,19 +6,31 @@
   "main": "index.js",
   "scripts": {
     "start": "node example.js",
-    "test": "node_modules/.bin/mocha",
-    "coverage": "istanbul cover node_modules/.bin/_mocha -- -- test/**/*.js"
+    "test": "NODE_ENV=test LOG_LEVEL=error node_modules/.bin/mocha",
+    "coverage": "NODE_ENV=test LOG_LEVEL=error istanbul cover node_modules/.bin/_mocha -- -- test/*.js",
+    "lint": "eslint src/ --cache --ignore-pattern .gitignore",
+    "fix": "eslint src/ --ignore-pattern .gitignore --fix"
   },
+  "pre-commit": [
+    "lint"
+  ],
   "dependencies": {
     "express": "^4.16.4",
-    "knex": "^0.16.3"
+    "jsonwebtoken": "^8.4.0",
+    "knex": "^0.16.3",
+    "md5": "^2.2.1",
+    "winston": "^3.1.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
+    "chai-http": "^4.2.1",
     "coveralls": "^3.0.2",
+    "eslint": "^5.12.1",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.15.0",
     "istanbul": "^0.4.5",
     "mocha": "^5.2.0",
-    "should": "^11.2.1",
+    "pre-commit": "^1.2.2",
     "sqlite3": "^4.0.6"
   },
   "repository": {
