--- a/src.express/package.json
+++ b/src.express/package.json
@@ -15,10 +15,9 @@
     "lint"
   ],
   "dependencies": {
+    "express": "^4.16.4",
     "jsonwebtoken": "^8.4.0",
     "knex": "^0.16.3",
-    "koa": "^2.7.0",
-    "koa-router": "^7.4.0",
     "md5": "^2.2.1",
     "winston": "^3.1.0"
   },
