--- a/src/package.json
+++ b/src/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^8.4.0",
     "knex": "^0.16.3",
     "koa": "^2.7.0",
+    "koa-body": "^4.0.8",
     "koa-router": "^7.4.0",
     "md5": "^2.2.1",
     "winston": "^3.1.0"
