--- a/src/package.json
+++ b/src/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node example.js",
     "test": "NODE_ENV=test LOG_LEVEL=error node_modules/.bin/mocha",
-    "coverage": "NODE_ENV=test LOG_LEVEL=error nyc node_modules/.bin/_mocha --exit -- test/*.js",
+    "coverage": "NODE_ENV=test LOG_LEVEL=error nyc node_modules/.bin/_mocha -- test/*.js",
     "lint": "eslint src/ --cache --ignore-pattern .gitignore",
     "fix": "eslint src/ --ignore-pattern .gitignore --fix"
   },
